--- a/sampleAppOAuth2/templates/index.html
+++ b/sampleAppOAuth2/templates/index.html
@@ -31,14 +31,14 @@ Before using this app, please make sure you do the following:
 <br/><br/><br/>
 
 <!-- Sign In With Intuit Button -->
-<b>Sign In With Intuit</b><br/>
+<!-- <b>Sign In With Intuit</b><br/>
 <a class="imgLink" href="#" onclick="launchPopup('/sampleAppOAuth2/signInWithIntuit/')">
     <img
             style="height: 40px"
             src="{% static "IntuitSignIn-lg-white@2x.jpg" %}" alt="My image"
     />
 </a>
-<br/><br/><br/>
+<br/><br/><br/> -->
 
 <!-- Connect To QuickBooks Button -->
 <b>Connect To QuickBooks</b><br/>
