--- a/sampleAppOAuth2/templates/connected.html
+++ b/sampleAppOAuth2/templates/connected.html
@@ -1,7 +1,7 @@
 {% load static %}
 <html>
 <head>
-    <title>OAuth2 Sample App - Intuit</title>
+    <title>quickbook tw Sample App </title>
     <link rel="stylesheet" type="text/css" href="{% static "style.css" %}">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script>
